objects/Policy_Artifacts__c.object
<CustomObject>
    <fields>
        <fullName>App_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Code</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Provisioning_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entitlement_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entitlement Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Entitlements__c.ParentApp__c</field>
                <operation>equals</operation>
                <valueField>$Source.App_Code__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Entitlements__c</referenceTo>
        <relationshipLabel>Policy Artifacts</relationshipLabel>
        <relationshipName>Provisioning_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Rule__c</fullName>
        <label>Parent Rule</label>
        <referenceTo>AP_Rule__c</referenceTo>
        <relationshipLabel>Policy Artifacts</relationshipLabel>
        <relationshipName>Policy_Artifacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Policy Artifiacts</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Policy Artifact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Artifacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>